@@ -42,6 +42,7 @@ import com.kunzisoft.keepass.database.element.Database
 import com.kunzisoft.keepass.model.EntryInfo
 import com.kunzisoft.keepass.model.Field
 import com.kunzisoft.keepass.notifications.KeyboardEntryNotificationService
+import com.kunzisoft.keepass.otp.OtpEntryFields.OTP_TOKEN_FIELD
 import com.kunzisoft.keepass.settings.PreferencesUtil
 import com.kunzisoft.keepass.utils.*
 
@@ -245,6 +246,13 @@ class MagikIME : InputMethodService(), KeyboardView.OnKeyboardActionListener {
                 }
                 actionGoAutomatically()
             }
+            KEY_OTP -> {
+                if (entryInfoKey != null) {
+                    currentInputConnection.commitText(
+                            entryInfoKey!!.getGeneratedFieldValue(OTP_TOKEN_FIELD), 1)
+                }
+                actionGoAutomatically()
+            }
             KEY_URL -> {
                 if (entryInfoKey != null) {
                     currentInputConnection.commitText(entryInfoKey!!.url, 1)
@@ -254,7 +262,7 @@ class MagikIME : InputMethodService(), KeyboardView.OnKeyboardActionListener {
             KEY_FIELDS -> {
                 if (entryInfoKey != null) {
                     fieldsAdapter?.apply {
-                        setFields(entryInfoKey!!.customFields)
+                        setFields(entryInfoKey!!.customFields.filter { it.name != OTP_TOKEN_FIELD})
                         notifyDataSetChanged()
                     }
                 }
@@ -326,6 +334,7 @@ class MagikIME : InputMethodService(), KeyboardView.OnKeyboardActionListener {
         private const val KEY_ENTRY = 620
         private const val KEY_USERNAME = 500
         private const val KEY_PASSWORD = 510
+        private const val KEY_OTP = 515
         private const val KEY_URL = 520
         private const val KEY_FIELDS = 530
 
