@@ -26,26 +26,26 @@
         <Key
             android:codes="600"
             android:keyIcon="@drawable/ic_keyboard_white_24dp"
-            android:keyWidth="15%p"
+            android:keyWidth="17%p"
             android:horizontalGap="1%p"
             android:keyEdgeFlags="left"
             android:isRepeatable="false"/>
         <Key
             android:codes="620"
-            android:keyWidth="46%p"
+            android:keyWidth="45%p"
             android:keyIcon="@drawable/ic_key_white_24dp"
             android:horizontalGap="2%p"
             android:isRepeatable="false"/>
         <Key
             android:codes="-5"
             android:keyIcon="@drawable/ic_backspace_white_24dp"
-            android:keyWidth="16%p"
+            android:keyWidth="14%p"
             android:horizontalGap="2%p"
             android:isRepeatable="true"/>
         <Key
             android:codes="-4"
             android:keyIcon="@drawable/ic_keyboard_return_white_24dp"
-            android:keyWidth="16%p"
+            android:keyWidth="17%p"
             android:horizontalGap="1%p"
             android:isRepeatable="false"
             android:keyEdgeFlags="right"/>
