@@ -26,25 +26,31 @@
             android:codes="520"
             android:keyEdgeFlags="left"
             android:keyIcon="@drawable/ic_link_black_24dp"
-            android:keyWidth="24%p"
+            android:keyWidth="15%p"
             android:horizontalGap="1%p"
             android:isRepeatable="false"/>
         <Key
             android:codes="500"
             android:keyIcon="@drawable/ic_person_white_24dp"
-            android:keyWidth="24%p"
-            android:horizontalGap="1%p"
+            android:keyWidth="17%p"
+            android:horizontalGap="2%p"
             android:isRepeatable="false" />
         <Key
             android:codes="510"
             android:keyIcon="@drawable/ic_password_white_24dp"
-            android:keyWidth="24%p"
+            android:keyWidth="28%p"
             android:horizontalGap="1%p"
+            android:isRepeatable="false"/>
+        <Key
+            android:codes="515"
+            android:keyIcon="@drawable/ic_otp_white_24dp"
+            android:keyWidth="17%p"
+            android:horizontalGap="2%p"
             android:isRepeatable="false"/>
         <Key
             android:codes="530"
             android:keyIcon="@drawable/ic_list_white_24dp"
-            android:keyWidth="23%p"
+            android:keyWidth="15%p"
             android:horizontalGap="1%p"
             android:isRepeatable="false"
             android:keyEdgeFlags="right"/>
@@ -61,25 +67,25 @@
         <Key
             android:codes="611"
             android:keyIcon="@drawable/ic_lock_white_24dp"
-            android:keyWidth="17%p"
+            android:keyWidth="26%p"
             android:horizontalGap="2%p"
             android:isRepeatable="false" />
         <Key
             android:codes="620"
             android:keyIcon="@drawable/ic_key_white_24dp"
-            android:keyWidth="27%p"
+            android:keyWidth="18%p"
             android:horizontalGap="1%p"
             android:isRepeatable="false"/>
         <Key
             android:codes="-5"
             android:keyIcon="@drawable/ic_backspace_white_24dp"
-            android:keyWidth="15%p"
+            android:keyWidth="14%p"
             android:horizontalGap="2%p"
             android:isRepeatable="true"/>
         <Key
             android:codes="-4"
             android:keyIcon="@drawable/ic_keyboard_return_white_24dp"
-            android:keyWidth="15%p"
+            android:keyWidth="17%p"
             android:horizontalGap="1%p"
             android:isRepeatable="false"
             android:keyEdgeFlags="right"/>
