@@ -1,2 +1,3 @@
  * Déverouillage de base de données avec identifiants de l'appareil (PIN/Password/Pattern) #779 #102
  * Supprimer le parmètre de base de données par défaut quand le fichier n'est plus accessible #803
+ * Déplacer le bouton OTP vers le premier niveau de vue dans le Magiclavier #587
